--- a/medCalc/app/partials/calculators.html
+++ b/medCalc/app/partials/calculators.html
@@ -13,25 +13,29 @@
 
     <div class="app-body scrollable">
         <div class="sidebar sidebar-left ng-hide" toggleable inactive-class="ng-hide" parent-active-class="sidebar-left-in" id="mainSidebar">
-            <div class="scrollable">
-                <div class="form-group">
+            <div class="scrollable searchbox"> 
+            <div class="form-group scrollable-content">
                     <div class="input-group">
-                        <input type="text" class="form-control search-query" placeholder="Αναζήτηση..." ng-model="filterText" ng-model-options="{ debounce: 400 }" />
+                        <input type="text" class="form-control search-query" placeholder="Αναζήτηση..." ng-model="filterText" ng-model-options="{ debounce: 300 }" />
                         <span class="input-group-btn" ng-switch on="filterText">
                             <button ng-switch-when="" type="button" class="btn btn-primary"><i class="fa fa-search"></i></button>
                             <button ng-switch-default type="button" class="btn btn-danger" ng-click="clearSearchBox()"><i class="fa fa-times-circle"></i></button>
                         </span>
-
                     </div>
+                    <div class="tags"><span class="badge" ng-repeat="tags in views.tags">{{tags}}</span></div>
                 </div>
+            </div>
+            <div id="navview" class="scrollable">
                 <div class="scrollable-content">
                     <div class="panel-group" role="tablist" aria-multiselectable="true" ng-model="panels.activePanel">
                         <div class="list-group" toggle="off" bubble target="mainSidebar">
-                          <div ng-repeat="view in panelsList track by view.id" class="repeated-nav-view">
-                            <div ng-hide="!CreateHeader($index)" class="list-group-item list-group-item-info" >
-                                {{view.category}}
-                            </div>
-                            <nav-view class='am-slide-left' view='view'></nav-view>
+                          <div ng-repeat="view in panelsList track by view.id">
+                              <div ng-hide="view.hidden" class="nav-view-item">
+                                  <div ng-if="CreateHeader($index)" class="list-group-item list-group-item-info">
+                                      {{view.category}}
+                                  </div>
+                                  <nav-view view='view'></nav-view>
+                              </div>
                           </div>
                         </div>
                     </div>
@@ -39,15 +43,17 @@
             </div>
         </div>
         <div scroll-monitor class="content scrollable-content scroll-spy-target">
-            <div id="{{view.id}}" class="panel panel-info scroll-item repeated-view" view='view' ng-repeat="view in panelsList track by view.id">
-                <div class="panel-heading">
-                    <button class="btn btn-default pull-right" ng-show="view.reset" verified-click="clearPanel(view.id)">
-                        <i class="fa fa-refresh"></i>
-                    </button>
-                    <h4>{{view.name}}</h4>
-                </div>
-                <div class="panel-body">
-                    <view view="view"></view>
+            <div id="{{view.id}}" ng-repeat="view in panelsList track by view.id">
+                <div class="panel panel-info scroll-item repeated-view" view='view' ng-hide="view.hidden">
+                    <div class="panel-heading">
+                        <button class="btn btn-default pull-right" ng-show="view.reset" verified-click="clearPanel(view.id)">
+                            <i class="fa fa-refresh"></i>
+                        </button>
+                        <h4>{{view.name}}</h4>
+                    </div>
+                    <div class="panel-body">
+                        <view view="view"></view>
+                    </div>
                 </div>
             </div>
         </div>
