--- a/medCalc/app/partials/directives/result.html
+++ b/medCalc/app/partials/directives/result.html
@@ -1,6 +1,11 @@
-﻿<md-card>
-    <md-card-content>
-        <h2 ng-bind-html="result.prefix + result.result + result.suffix | to_trusted"></h2>
-        <p ng-bind-html="result.explanation | to_trusted"></p>
-    </md-card-content>
+﻿<md-card class="result" ng-class="resultLevelClass">
+    <md-card-header>
+        <md-card-avatar>
+            <md-icon md-svg-icon="{{resultLevelIcon}}" ng-class="resultLevelClass" />
+        </md-card-avatar>
+        <md-card-header-text>
+            <span class="md-title" ng-bind-html="result.prefix + result.result + result.suffix | to_trusted"></span>
+            <span class="md-subhead" ng-bind-html="result.explanation | to_trusted"></span>
+        </md-card-header-text>
+    </md-card-header>
 </md-card>
