--- a/medCalc/app/partials/directives/modal.html
+++ b/medCalc/app/partials/directives/modal.html
@@ -1,6 +1,6 @@
-﻿<md-dialog aria-label="{{view.name}}">
+﻿<md-dialog aria-label="{{view.description.name}}">
     <md-toolbar layout="row" layout-align="space-between center">
-        <h3>{{view.name}}</h3>
+        <h3>{{view.description.name}}</h3>
         <span flex></span>
         <md-button class="md-icon-button" ng-click="closeDialog()">
             <md-icon md-svg-src="close" aria-label="Close dialog"></md-icon>
@@ -8,7 +8,7 @@
     </md-toolbar>
     <md-dialog-content>
         <view view="view" />
-    </md-dialog-content>'
+    </md-dialog-content>
     <md-dialog-actions layout="row">
         <span flex></span>
         <md-button class="md-primary" ng-click="closeDialog()">ΟΚ</md-button>
