--- a/medCalc/app/partials/directives/result.html
+++ b/medCalc/app/partials/directives/result.html
@@ -4,8 +4,10 @@
             <md-icon md-svg-icon="{{resultLevelIcon}}" ng-class="resultLevelClass" />
         </md-card-avatar>
         <md-card-header-text>
-            <span class="md-title" ng-bind-html="result.prefix + result.result + result.suffix | to_trusted"></span>
-            <span class="md-subhead" ng-bind-html="result.explanation | to_trusted"></span>
+            <span class="md-title" ng-bind-html="result.prefix + '<strong>' + result.result + '</strong>' + result.suffix | to_trusted"></span>
         </md-card-header-text>
+        <md-card-content>
+            <span ng-bind-html="result.explanation | to_trusted"></span>
+        </md-card-content>
     </md-card-header>
 </md-card>
