--- a/medCalc/app/partials/directives/dialog.html
+++ b/medCalc/app/partials/directives/dialog.html
@@ -1,6 +1,6 @@
-﻿<md-dialog aria-label="{{view.description.name}}">
+﻿<md-dialog aria-label="{{::view.description.name}}">
     <md-toolbar layout="row" layout-align="space-between center">
-        <h3>{{view.description.name}}</h3>
+        <h3>{{::view.description.name}}</h3>
         <span flex></span>
         <md-button class="md-icon-button" ng-click="closeDialog()">
             <md-icon md-svg-src="close" aria-label="Close dialog"></md-icon>
