--- a/medCalc/app/partials/views/calculator.basic.html
+++ b/medCalc/app/partials/views/calculator.basic.html
@@ -20,7 +20,7 @@
             <div layout="row" ng-switch-when="number">
                 <md-input-container flex>
                     <label for="{{::field.id}}" ng-bind-html="::field.name | to_trusted"></label>
-                    <input type="number" step="::{{field.input.step}}" min="::{{field.input.min}}" max="::{{field.input.max}}" ng-disabled="{{field.input.disabled}}" name="::{{field.id}}" ng-model="view.values[field.id]" select-on-click />
+                    <input type="number" step="{{::field.input.step}}" min="{{::field.input.min}}" max="{{::field.input.max}}" ng-disabled="{{field.input.disabled}}" name="{{::field.id}}" ng-model="view.values[field.id]" select-on-click />
                     <div class="hint">{{::field.description}}</div>
                 </md-input-container>
                 <md-button class="md-icon-button" aria-label="Υπολογισμός..." ng-if="field.calculatorView" ng-click="modalCalculator(field.calculatorView, $event)">
@@ -41,7 +41,7 @@
                 </md-select>
             </md-input-container>
             <md-input-container ng-switch-when="check">
-                <md-checkbox ng-model="view.values[field.id]">{{::field.name | to_trusted}}</md-checkbox>
+                <md-checkbox ng-disabled="{{field.input.disabled}}" ng-model="view.values[field.id]">{{::field.name | to_trusted}}</md-checkbox>
                 <div class="hint">{{::field.description}}</div>
             </md-input-container>
             <div ng-switch-when="result">
