--- a/medCalc/app/partials/directives/navView.html
+++ b/medCalc/app/partials/directives/navView.html
@@ -1,10 +1,11 @@
 ﻿<md-list-item>
     <md-button
                ng-click="$parent.$parent.$parent.closeLeftPanel()"
-               ng-href="#{{view.description.id}}"
+               ng-href="#{{::view.description.id}}"
                du-smooth-scroll
                du-scrollspy
-               duration="2000">
-        {{view.description.name}}
+               offset="50"
+               >
+        {{::view.description.name}}
     </md-button>
 </md-list-item>
