--- a/medCalc/app/partials/directives/result.html
+++ b/medCalc/app/partials/directives/result.html
@@ -4,10 +4,15 @@
             <md-icon md-svg-icon="{{resultLevelIcon}}" ng-class="resultLevelClass" />
         </md-card-avatar>
         <md-card-header-text>
-            <span class="md-title" ng-bind-html="result.prefix + '<strong>' + result.result + '</strong>' + result.suffix | to_trusted"></span>
+            <div layout="row" layout-align="start end">
+                <span class="result-text" ng-bind-html="result.result | to_trusted"></span>
+                <span class="result-suffix" ng-bind-html="result.suffix | to_trusted"></span>
+            </div>
+            <span class="md-subhead" ng-bind-html="result.prefix | to_trusted"></span>
         </md-card-header-text>
-        <md-card-content>
-            <span ng-bind-html="result.explanation | to_trusted"></span>
-        </md-card-content>
     </md-card-header>
+    <md-card-content ng-show="result.explanation || result.formula">
+        <p ng-bind-html="result.explanation | to_trusted"></p>
+        <div katex-bind="result.formula"></div>
+    </md-card-content>
 </md-card>
