--- a/medCalc/app/partials/directives/navView.html
+++ b/medCalc/app/partials/directives/navView.html
@@ -1,7 +1,3 @@
-﻿<md-list-item ng-click="$parent.$parent.$parent.closeLeftPanel()"
-              ng-href="#{{::view.description.id}}"
-              du-smooth-scroll
-              du-scrollspy
-              offset=60>
+﻿<md-list-item ng-click="$parent.$parent.$parent.closeLeftPanel()">
     {{::view.description.name}}
 </md-list-item>
