--- a/medCalc/app/partials/views/calculator.basic.html
+++ b/medCalc/app/partials/views/calculator.basic.html
@@ -33,7 +33,7 @@
                     <input type="number" step="{{::field.input.step}}" min="{{::field.input.min}}" max="{{::field.input.max}}" ng-disabled="{{field.input.disabled}}" name="{{::field.id}}" ng-model="view.values[field.id]" select-on-click />
                     <div class="hint">{{::field.description}}</div>
                 </md-input-container>
-                <md-button class="md-icon-button" aria-label="Õðïëïãéóìüò..." ng-if="field.calculatorView" ng-click="modalCalculator(field.calculatorView, $event)">
+                <md-button class="md-icon-button" aria-label="ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½..." ng-if="field.calculatorView" ng-click="modalCalculator(field.calculatorView, $event)">
                     <md-icon md-svg-icon="edit" />
                 </md-button>
             </div>
