--- a/medCalc/app/partials/directives/dialog.html
+++ b/medCalc/app/partials/directives/dialog.html
@@ -1,13 +1,14 @@
 ﻿<md-dialog aria-label="{{::view.description.name}}">
     <md-toolbar layout="row" layout-align="space-between center">
-        <h3>{{::view.description.name}}</h3>
         <span flex></span>
         <md-button class="md-icon-button" ng-click="closeDialog()">
             <md-icon md-svg-src="close" aria-label="Close dialog"></md-icon>
         </md-button>
     </md-toolbar>
     <md-dialog-content>
-        <view view="view" />
+        <div>
+            <view view="view" />
+        </div>
     </md-dialog-content>
     <md-dialog-actions layout="row">
         <span flex></span>
