--- a/medCalc/app/css/site.css
+++ b/medCalc/app/css/site.css
@@ -47,7 +47,8 @@ md-icon,
 md-icon svg {
     fill: inherit;
 }
-
+md-toolbar md-icon {
+  fill: white; }
 
 /* starting animations */
 md-card.result.resultlevel-normal-none,
@@ -131,18 +132,68 @@ nav-view.active {
     color: red;
 }
 
-/*.result-header {
-    visibility: hidden;
-    height: 0;
+.view-title .md-headline {
+    height: 64px;
 }
 
-.md-sticky-clone[sticky-state=active] .md-subheader.result{
-    margin-top: -10px;
-    margin-left: -40px;
+/* when hiding the picture */
+.ng-hide-add         { animation:1s flipOutX ease; }
+
+/* when showing the picture */
+.ng-hide-remove      { animation:1s flipInX ease; }
+
+/* ANIMATIONS (FROM ANIMATE.CSS) ======================== */
+/* flip in */
+@keyframes flipInX {
+  0% {
+    transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+    transition-timing-function: ease-in;
+    opacity: 0;
+  }
+
+  40% {
+    transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+    transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+    transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+    transition-timing-function: ease-in;
+    transition-timing-function: ease-in;
+  }
+
+  60% {
+    transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
+    transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
+    transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
+    opacity: 1;
+  }
+
+  80% {
+    transform: perspective(400px) rotate3d(1, 0, 0, -5deg);
+    transform: perspective(400px) rotate3d(1, 0, 0, -5deg);
+    transform: perspective(400px) rotate3d(1, 0, 0, -5deg);
+  }
+
+  100% {
+    transform: perspective(400px);
+    transform: perspective(400px);
+    transform: perspective(400px);
+  }
 }
 
-    .md-sticky-clone[sticky-state=active] .md-subheader.result .md-subheader-inner {
-        padding-bottom: 0;
-    }*/
+@keyframes flipOutX {
+  from {
+    -webkit-transform: perspective(400px);
+    transform: perspective(400px);
+  }
 
+  30% {
+    -webkit-transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+    transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+    opacity: 1;
+  }
 
+  to {
+    -webkit-transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+    transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+    opacity: 0;
+  }
+}
